Update BachecaTest.java